@@ -7,8 +7,6 @@
 
 #### Create by **[Thanaphum Thepwan](https://www.github.com/tnptw)** and **[Akkharawat Burachokviwat](https://www.github.com/EarthAkkharawat)**.
 
-This is a clone of the strategy of Plants VS. Zombies, video game which originally developed by PopCap Games.
-
 Made as a part of project in 2110215 PROG METH I, Academic Year 2021.
 
 Use Java, JavaFX
@@ -21,6 +19,15 @@ Use Java, JavaFX
 - Zombies Available: Normal Zombie, Funnelhead Zombie and Buckethead Zombie
 - Shovel
 - Cool sounds like original game
+
+## How to Play
+### Executing JAR file.
+  1. Make sure you have downloaded the lastest version of [Java](https://oracle.com/java/technologies/downloads/) and [JavaFX](https://gluonhq.com/products/javafx/).
+  2. Clone this repository using `git clone https://github.com/parntt/prog-meth-project.git`
+  3. `cd` into the directory.
+  4. Use the command `java -jar --module-path "path_to_fx/lib" --add-modules javafx.controls,javafx.media,javafx.fxml PlantsVsZombies.jar`
+  5. Have Fun :D 
+
 
 ## Related content Topics 
 
